refactor: доработка Model и исправление тестов в соответсвии с новыми геттерами